[package]
name = "chess"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chess"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.32.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.65.0"
piston2d-drag_controller = "0.29.0"

conrod = "0.61.1"
conrod_core = "0.66.0"
conrod_piston = "0.66.0"
